채용 공고 리스트

--- a/project/index.html
+++ b/project/index.html
@@ -38,7 +38,9 @@
         <!-- 둘러보기창  -->
 
         <!-- 바디 start -->
+
         <!-- 광고 창 start -->
+        <body>
         <div class="body">
             <section>
                 <div class="ad-img1"></div>
@@ -133,13 +135,16 @@
         <!-- 바디 end -->
 
         <!-- 풋터 start -->
-            <div class="footer bg-light p-5 text-center">
+        <div>
+            <div class="bg-light p-5 text-center">
             <h4>채용 회사 이름 정하기</h4>
             <h5>☎ 000-0000-0000</h5>
             <button class="btn btn-outline-primary">고객센터</button>
             <button class="btn btn-outline-primary">오시는길</button>
+            </div>
         </div>
-                <!-- 풋터 end -->
+        <!-- 풋터 end -->
+
 
         </body>
         
