검색창 추가

--- a/project/list.html
+++ b/project/list.html
@@ -31,9 +31,23 @@
                     <div>로그인</div>
                     <div>개인/기업</div>
                 </div>
+                </nav>
+
         </header>
+                <!-- 헤더 end -->
+
         <hr>
-        <!-- 헤더 end -->
+        
+        <div class="row justify-content-end mb-3">
+            <div class="col-md-4">
+                <form action="/" method="get" class="form-inline">
+                    <div class="input-group rounded">
+                        <input class="search-box form-control me-2 rounded-end" type="text" placeholder="Search..." name="keyword" required/>
+                    </div>
+                </form>
+            </div>
+        </div>
+        
 
         <!-- 광고 창 start -->
         <div class="body">
@@ -45,6 +59,7 @@
         <!-- 바디 start -->
 
             <section>
+
                 <div class="title mb-20">추천 채용 정보</div>
                 <div class="img-box">
                     <div>
