--- a/project/index.html
+++ b/project/index.html
@@ -19,6 +19,7 @@
                 <div class="logo">
                     <div>로고자리</div>
                 </div>
+
                 <div class="menu-left">
                     <div>이력서</div>
                     <div>채용정보</div> 
@@ -30,17 +31,25 @@
                     <div>로그인</div>
                     <div>개인/기업</div>
                 </div>
+                </nav>
+
         </header>
+                <!-- 헤더 end -->
+
         <hr>
-        <!-- 헤더 end -->
+        
+        <div class="row justify-content-end mb-3">
+            <div class="col-md-4">
+                <form action="/" method="get" class="form-inline">
+                    <div class="input-group rounded">
+                        <input class="search-box form-control me-2 rounded-end" type="text" placeholder="Search..." name="keyword" required/>
+                    </div>
+                </form>
+            </div>
+        </div>
         
 
-        <!-- 둘러보기창  -->
-
-        <!-- 바디 start -->
-
         <!-- 광고 창 start -->
-        <body>
         <div class="body">
             <section>
                 <div class="ad-img1"></div>
