--- a/project/list.html
+++ b/project/list.html
@@ -168,10 +168,23 @@
         <!-- 풋터 start -->
         <div>
             <div class="bg-light p-5 text-center">
-            <h4>채용 회사 이름 정하기</h4>
-            <h5>☎ 000-0000-0000</h5>
-            <button class="btn btn-outline-primary">고객센터</button>
-            <button class="btn btn-outline-primary">오시는길</button>
+            <div class="d-flex justify-content-between">
+                <div>회사소개</div>
+                <div>이용약관</div>
+                <div>개인정보 처리방침</div>
+                <div>고객센터</div>
+            </div>
+
+            <div class="help">
+                <div>고객센터 : 000-0000-0000 (평일 09:00 - 18:00, 주말 공휴일 휴무)</div>
+                <div>이메일 : help@xxxxxxxx.co.kr  FAX  : 000-0000-0000 </div>
+                <div>(주)회사이름 : 부산광역시 부산진구 중앙대로 749 3층, 대표 최주호</div>
+                <div>사업자 등록번호 000-82-00000, 직업정보제공사업 : 서울 관악 제 2005-6호, 통신판매업 : 제 2005-02339호</div>
+                <div>Copyright (c) (주)기업명 All rights reserved.</div>
+            </div>
+
+            <!-- <button class="btn btn-outline-primary">고객센터</button>
+            <button class="btn btn-outline-primary">오시는길</button> -->
             </div>
         </div>
         <!-- 풋터 end -->
