--- a/project/company.html
+++ b/project/company.html
@@ -114,7 +114,9 @@
                         <div class="text1">서비스업,고객센터</div>
                         <div class="text2">맡은 업무에 항상 최선을 다하는 인재입니다.</div>
                     </td>
-                    <td>이력서보기</td>
+                    <td>
+                        <button class="btn btn-outline-primary">이력서보기</button> 
+                    </td>
                 </tr>
                 <tr>
                     <td>홍길동</td>
@@ -122,16 +124,9 @@
                         <div class="text1">서비스업,고객센터</div>
                         <div class="text2">맡은 업무에 항상 최선을 다하는 인재입니다.</div>
                     </td>
-                    <td>이력서보기</td>
-                </tr>
-
-                <tr>
-                    <td>홍길동</td>
                     <td>
-                        <div class="text1">서비스업,고객센터</div>
-                        <div class="text2">맡은 업무에 항상 최선을 다하는 인재입니다.</div>
+                        <button class="btn btn-outline-primary">이력서보기</button> 
                     </td>
-                    <td>이력서보기</td>
                 </tr>
 
                 <tr>
@@ -140,31 +135,9 @@
                         <div class="text1">서비스업,고객센터</div>
                         <div class="text2">맡은 업무에 항상 최선을 다하는 인재입니다.</div>
                     </td>
-                    <td>이력서보기</td>
-                </tr>
-                <tr>
-                    <td>홍길동</td>
                     <td>
-                        <div class="text1">서비스업,고객센터</div>
-                        <div class="text2">맡은 업무에 항상 최선을 다하는 인재입니다.</div>
+                        <button class="btn btn-outline-primary">이력서보기</button> 
                     </td>
-                    <td>이력서보기</td>
-                </tr>
-                <tr>
-                    <td>홍길동</td>
-                    <td>
-                        <div class="text1">서비스업,고객센터</div>
-                        <div class="text2">맡은 업무에 항상 최선을 다하는 인재입니다.</div>
-                    </td>
-                    <td>이력서보기</td>
-                </tr>
-                <tr>
-                    <td>홍길동</td>
-                    <td>
-                        <div class="text1">서비스업,고객센터</div>
-                        <div class="text2">맡은 업무에 항상 최선을 다하는 인재입니다.</div>
-                    </td>
-                    <td>이력서보기</td>
                 </tr>
 
                 <tr>
@@ -173,7 +146,9 @@
                         <div class="text1">서비스업,고객센터</div>
                         <div class="text2">맡은 업무에 항상 최선을 다하는 인재입니다.</div>
                     </td>
-                    <td>이력서보기</td>
+                    <td>
+                        <button class="btn btn-outline-primary">이력서보기</button> 
+                    </td>
                 </tr>
                 <tr>
                     <td>홍길동</td>
@@ -181,7 +156,50 @@
                         <div class="text1">서비스업,고객센터</div>
                         <div class="text2">맡은 업무에 항상 최선을 다하는 인재입니다.</div>
                     </td>
-                    <td>이력서보기</td>
+                    <td>
+                        <button class="btn btn-outline-primary">이력서보기</button> 
+                    </td>
+                </tr>
+                <tr>
+                    <td>홍길동</td>
+                    <td>
+                        <div class="text1">서비스업,고객센터</div>
+                        <div class="text2">맡은 업무에 항상 최선을 다하는 인재입니다.</div>
+                    </td>
+                    <td>
+                        <button class="btn btn-outline-primary">이력서보기</button> 
+                    </td>
+                </tr>
+                <tr>
+                    <td>홍길동</td>
+                    <td>
+                        <div class="text1">서비스업,고객센터</div>
+                        <div class="text2">맡은 업무에 항상 최선을 다하는 인재입니다.</div>
+                    </td>
+                    <td>
+                        <button class="btn btn-outline-primary">이력서보기</button> 
+                    </td>
+                </tr>
+
+                <tr>
+                    <td>홍길동</td>
+                    <td>
+                        <div class="text1">서비스업,고객센터</div>
+                        <div class="text2">맡은 업무에 항상 최선을 다하는 인재입니다.</div>
+                    </td>
+                    <td>
+                        <button class="btn btn-outline-primary">이력서보기</button> 
+                    </td>
+                </tr>
+                <tr>
+                    <td>홍길동</td>
+                    <td>
+                        <div class="text1">서비스업,고객센터</div>
+                        <div class="text2">맡은 업무에 항상 최선을 다하는 인재입니다.</div>
+                    </td>
+                    <td>
+                        <button class="btn btn-outline-primary">이력서보기</button> 
+                    </td>
                 </tr>
             </table>
 
