근무시간 추가

--- a/project/list.html
+++ b/project/list.html
@@ -94,59 +94,70 @@
             <table class="table">
                 <th>지역</th>
                 <th>회사정보</th>
+                <th>근무시간</th>
                 <th>급여정보</th>
 
                 <tr>
                     <td>서울</td>
                     <td>2024 샘표식품 각 부문 수시 채용</td>
+                    <th>09:00-18:00</th>
                     <td>최저시급</td>
                 </tr>
 
                 <tr>
                     <td>서울</td>
                     <td>2024 샘표식품 각 부문 수시 채용</td>
+                    <th>09:00-18:00</th>
                     <td>최저시급</td>
                 </tr>
 
                 <tr>
                     <td>서울</td>
                     <td>2024 샘표식품 각 부문 수시 채용</td>
+                    <th>09:00-18:00</th>
                     <td>최저시급</td>
                 </tr>
 
                 <tr>
                     <td>서울</td>
                     <td>2024 샘표식품 각 부문 수시 채용</td>
+                    <th>09:00-18:00</th>
                     <td>최저시급</td>
                 </tr>
                 <tr>
                     <td>서울</td>
                     <td>2024 샘표식품 각 부문 수시 채용</td>
+                    <th>09:00-18:00</th>
+                    <td>최저시급</td>
+                </tr>
+                <tr>
+                    <td>서울</td>
+                    <td>2024 샘표식품 각 부문 수시 채용</td>                    
+                    <th>09:00-18:00</th>
                     <td>최저시급</td>
                 </tr>
                 <tr>
                     <td>서울</td>
                     <td>2024 샘표식품 각 부문 수시 채용</td>
+                    <th>09:00-18:00</th>
                     <td>최저시급</td>
                 </tr>
                 <tr>
                     <td>서울</td>
                     <td>2024 샘표식품 각 부문 수시 채용</td>
+                    <th>09:00-18:00</th>
                     <td>최저시급</td>
                 </tr>
                 <tr>
                     <td>서울</td>
                     <td>2024 샘표식품 각 부문 수시 채용</td>
+                    <th>09:00-18:00</th>
                     <td>최저시급</td>
                 </tr>
                 <tr>
                     <td>서울</td>
                     <td>2024 샘표식품 각 부문 수시 채용</td>
-                    <td>최저시급</td>
-                </tr>
-                <tr>
-                    <td>서울</td>
-                    <td>2024 샘표식품 각 부문 수시 채용</td>
+                    <th>09:00-18:00</th>
                     <td>최저시급</td>
                 </tr>
             </table>
