--- a/project/list.html
+++ b/project/list.html
@@ -90,7 +90,58 @@
             </section>
 
             <hr>
-            
+            <div class="job-menu">
+                <div>
+                    <div class="title">지역별</div>
+                    <a href="#">서울</a>
+                    <a href="#">경기</a>
+                    <a href="#">인천</a>
+                    <a href="#">부산</a>
+                    <a href="#">대구</a>
+                    <a href="#">대전</a>
+                    <br>
+                    <a href="#">경남</a>
+                    <a href="#">전남</a>
+                    <a href="#">충남</a>
+                    <a href="#">광주</a>
+                    <a href="#">울산</a>
+                    <a href="#">경북</a>
+                    <br>
+                    <a href="#">전북</a>
+                    <a href="#">충북</a>
+                    <a href="#">강원</a>
+                    <a href="#">제주</a>
+                    <a href="#">세종</a>
+                    <a href="#">전국</a>
+                </div>
+                
+                <div>
+                    <div class="title">업종별</div>
+                    <a href="#">외식,음료</a>
+                    <a href="#">유통,판매</a>
+                    <a href="#">문화,여가,생활</a>
+                    <a href="#">서비스</a>
+                    <br>
+                    <a href="#">생산,건설,노무</a>
+                    <a href="#">IT,인터넷</a>
+                    <a href="#">미디어</a>
+                    <a href="#">운전,배달</a>
+
+                    <br>
+                    <a href="#">병원,간호,연구</a>
+                    <a href="#">고객담당,영업,리서치</a>
+                    <a href="#">사무,회계</a>
+                    <a href="#">교육,강사</a>
+
+                </div>
+
+            </div>
+
+
+            <hr>
+
+
+
             <table class="table">
                 <th>지역</th>
                 <th>회사정보</th>
