a태그 폰트설정

--- a/project/index.html
+++ b/project/index.html
@@ -65,6 +65,7 @@
 
             <!-- 추천 채용 정보 start -->
             <section>
+            
                 <div class="title mb-20">추천 채용 정보</div>
                 <div class="img-box">
                     <div>
@@ -91,7 +92,13 @@
             <hr>
 
             <section>
-                <div class="title mb-20">채용 정보</div>
+                <div class="jop-more">
+                    <div class="title mb-20">채용 정보</div>
+                    <a href="" class="text-body"><h5>더보기</h5></a>
+                </div>
+
+
+
                 <div class="company-box">
 
                     <div class="company">
