--- a/project/list.html
+++ b/project/list.html
@@ -93,45 +93,46 @@
             <div class="job-menu">
                 <div>
                     <div class="title">지역별</div>
-                    <a href="#">서울</a>
-                    <a href="#">경기</a>
-                    <a href="#">인천</a>
-                    <a href="#">부산</a>
-                    <a href="#">대구</a>
-                    <a href="#">대전</a>
+                    <a href="#" class="text-body">서울</a>
+                    <a href="#" class="text-body">경기</a>
+                    <a href="#" class="text-body">인천</a>
+                    <a href="#" class="text-body">부산</a>
+                    <a href="#" class="text-body">대구</a>
+                    <a href="#" class="text-body">대전</a>
                     <br>
-                    <a href="#">경남</a>
-                    <a href="#">전남</a>
-                    <a href="#">충남</a>
-                    <a href="#">광주</a>
-                    <a href="#">울산</a>
-                    <a href="#">경북</a>
+                    <a href="#" class="text-body">경남</a>
+                    <a href="#" class="text-body">전남</a>
+                    <a href="#" class="text-body">충남</a>
+                    <a href="#" class="text-body">광주</a>
+                    <a href="#" class="text-body">울산</a>
+                    <a href="#" class="text-body">경북</a>
                     <br>
-                    <a href="#">전북</a>
-                    <a href="#">충북</a>
-                    <a href="#">강원</a>
-                    <a href="#">제주</a>
-                    <a href="#">세종</a>
-                    <a href="#">전국</a>
+                    <a href="#" class="text-body">전북</a>
+                    <a href="#" class="text-body">충북</a>
+                    <a href="#" class="text-body">강원</a>
+                    <a href="#" class="text-body">제주</a>
+                    <a href="#" class="text-body">세종</a>
+                    <a href="#" class="text-body">전국</a>
                 </div>
                 
                 <div>
                     <div class="title">업종별</div>
-                    <a href="#">외식,음료</a>
-                    <a href="#">유통,판매</a>
-                    <a href="#">문화,여가,생활</a>
-                    <a href="#">서비스</a>
+                    <a href="#" class="text-body">외식,음료</a>
+                    <a href="#" class="text-body">유통,판매</a>
+                    <a href="#" class="text-body">문화,여가,생활</a>
+                    <a href="#" class="text-body">서비스</a>
                     <br>
-                    <a href="#">생산,건설,노무</a>
-                    <a href="#">IT,인터넷</a>
-                    <a href="#">미디어</a>
-                    <a href="#">운전,배달</a>
+                    <a href="#" class="text-body">생산,건설,노무</a>
+                    <a href="#" class="text-body">IT,인터넷</a>
+                    <a href="#" class="text-body">미디어</a>
+                    <a href="#" class="text-body">운전,배달</a>
 
                     <br>
-                    <a href="#">병원,간호,연구</a>
-                    <a href="#">고객담당,영업,리서치</a>
-                    <a href="#">사무,회계</a>
-                    <a href="#">교육,강사</a>
+                    <a href="#" class="text-body">병원,간호,연구</a>
+                    <a href="#" class="text-body">고객담당,영업,리서치</a>
+                    <a href="#" class="text-body">사무,회계</a>
+                    <br>
+                    <a href="#" class="text-body">교육,강사</a>
 
                 </div>
 
