--- a/project/company.html
+++ b/project/company.html
@@ -6,6 +6,7 @@
     <title>구직 사이트</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 
 </head>
 
@@ -49,11 +50,13 @@
             <div class="col-md-4">
                 <form action="/" method="get" class="form-inline">
                     <div class="input-group rounded">
-                        <input class="search-box form-control me-2 rounded-end" type="text" placeholder="Search..." name="keyword" required/>
+                        <input class="search-box form-control me-2 rounded-end" type="text" placeholder="기업,채용정보를 입력하세요" name="keyword" required/>
+                        <a href="#" class="text-body"><i class="fa-solid fa-magnifying-glass icon-search"></i></a>
                     </div>
                 </form>
             </div>
         </div>
+
         
 
         <!-- 광고 창 start -->
