헤더 버튼화

--- a/project/index.html
+++ b/project/index.html
@@ -32,15 +32,15 @@
                 </div>
 
                 <div class="menu-left">
-                    <div>이력서</div>
-                    <div>채용정보</div> 
-                    <div>마이페이지</div>
+                    <div><a href="#" class="text-body">이력서</a></div>
+                    <div><a href="#" class="text-body">채용정보</a></div>
+                    <div><a href="#" class="text-body">마이페이지</a></div>
                 </div>
 
                 <div class="menu-right">
-                    <div>회원가입</div>
-                    <div>로그인</div>
-                    <div>개인/기업</div>
+                    <div><a href="#" class="text-body">회원가입</a></div>
+                    <div><a href="#" class="text-body">로그인</a></div>
+                    <div><a href="#" class="text-body">개인/기업</a></div>
                 </div>
                 </nav>
 
