커뮤니티 추가

--- a/project/company.html
+++ b/project/company.html
@@ -32,6 +32,7 @@
                     <div class="menu-left">
                         <div><a href="#" class="text-body">이력서</a></div>
                         <div><a href="#" class="text-body">채용정보</a></div>
+                        <div><a href="#" class="text-body">커뮤니티</a></div>
                         <div><a href="#" class="text-body">마이페이지</a></div>
                     </div>
     
@@ -106,10 +107,10 @@
             <hr>
             
             <table class="table">
-                <div class="title mb-20">지원 현황</div>
+                <div class="title mb-20">구직자 정보</div>
 
                 <th>이름</th>
-                <th>지원자 정보</th>
+                <th>구직자 정보</th>
                 <th>이력서</th>
 
                 <tr>
@@ -119,7 +120,7 @@
                         <div class="text2">맡은 업무에 항상 최선을 다하는 인재입니다.</div>
                     </td>
                     <td>
-                        <button class="btn btn-outline-primary">이력서보기</button> 
+                        <button class="btn btn-outline-body">이력서보기</button> 
                     </td>
                 </tr>
                 <tr>
@@ -129,18 +130,7 @@
                         <div class="text2">맡은 업무에 항상 최선을 다하는 인재입니다.</div>
                     </td>
                     <td>
-                        <button class="btn btn-outline-primary">이력서보기</button> 
-                    </td>
-                </tr>
-
-                <tr>
-                    <td>홍길동</td>
-                    <td>
-                        <div class="text1">서비스업,고객센터</div>
-                        <div class="text2">맡은 업무에 항상 최선을 다하는 인재입니다.</div>
-                    </td>
-                    <td>
-                        <button class="btn btn-outline-primary">이력서보기</button> 
+                        <button class="btn btn-outline-body">이력서보기</button> 
                     </td>
                 </tr>
 
@@ -151,37 +141,7 @@
                         <div class="text2">맡은 업무에 항상 최선을 다하는 인재입니다.</div>
                     </td>
                     <td>
-                        <button class="btn btn-outline-primary">이력서보기</button> 
-                    </td>
-                </tr>
-                <tr>
-                    <td>홍길동</td>
-                    <td>
-                        <div class="text1">서비스업,고객센터</div>
-                        <div class="text2">맡은 업무에 항상 최선을 다하는 인재입니다.</div>
-                    </td>
-                    <td>
-                        <button class="btn btn-outline-primary">이력서보기</button> 
-                    </td>
-                </tr>
-                <tr>
-                    <td>홍길동</td>
-                    <td>
-                        <div class="text1">서비스업,고객센터</div>
-                        <div class="text2">맡은 업무에 항상 최선을 다하는 인재입니다.</div>
-                    </td>
-                    <td>
-                        <button class="btn btn-outline-primary">이력서보기</button> 
-                    </td>
-                </tr>
-                <tr>
-                    <td>홍길동</td>
-                    <td>
-                        <div class="text1">서비스업,고객센터</div>
-                        <div class="text2">맡은 업무에 항상 최선을 다하는 인재입니다.</div>
-                    </td>
-                    <td>
-                        <button class="btn btn-outline-primary">이력서보기</button> 
+                        <button class="btn btn-outline-body">이력서보기</button> 
                     </td>
                 </tr>
 
@@ -192,7 +152,7 @@
                         <div class="text2">맡은 업무에 항상 최선을 다하는 인재입니다.</div>
                     </td>
                     <td>
-                        <button class="btn btn-outline-primary">이력서보기</button> 
+                        <button class="btn btn-outline-body">이력서보기</button> 
                     </td>
                 </tr>
                 <tr>
@@ -202,7 +162,48 @@
                         <div class="text2">맡은 업무에 항상 최선을 다하는 인재입니다.</div>
                     </td>
                     <td>
-                        <button class="btn btn-outline-primary">이력서보기</button> 
+                        <button class="btn btn-outline-body">이력서보기</button> 
+                    </td>
+                </tr>
+                <tr>
+                    <td>홍길동</td>
+                    <td>
+                        <div class="text1">서비스업,고객센터</div>
+                        <div class="text2">맡은 업무에 항상 최선을 다하는 인재입니다.</div>
+                    </td>
+                    <td>
+                        <button class="btn btn-outline-body">이력서보기</button> 
+                    </td>
+                </tr>
+                <tr>
+                    <td>홍길동</td>
+                    <td>
+                        <div class="text1">서비스업,고객센터</div>
+                        <div class="text2">맡은 업무에 항상 최선을 다하는 인재입니다.</div>
+                    </td>
+                    <td>
+                        <button class="btn btn-outline-body">이력서보기</button> 
+                    </td>
+                </tr>
+
+                <tr>
+                    <td>홍길동</td>
+                    <td>
+                        <div class="text1">서비스업,고객센터</div>
+                        <div class="text2">맡은 업무에 항상 최선을 다하는 인재입니다.</div>
+                    </td>
+                    <td>
+                        <button class="btn btn-outline-body">이력서보기</button> 
+                    </td>
+                </tr>
+                <tr>
+                    <td>홍길동</td>
+                    <td>
+                        <div class="text1">서비스업,고객센터</div>
+                        <div class="text2">맡은 업무에 항상 최선을 다하는 인재입니다.</div>
+                    </td>
+                    <td>
+                        <button class="btn btn-outline-body">이력서보기</button> 
                     </td>
                 </tr>
             </table>
