--- a/project/list.html
+++ b/project/list.html
@@ -32,6 +32,7 @@
                     <div class="menu-left">
                         <div><a href="#" class="text-body">이력서</a></div>
                         <div><a href="#" class="text-body">채용정보</a></div>
+                        <div><a href="#" class="text-body">커뮤니티</a></div>
                         <div><a href="#" class="text-body">마이페이지</a></div>
                     </div>
     
