기업 헤더 변경

--- a/project/company.html
+++ b/project/company.html
@@ -30,8 +30,7 @@
                     </div>
 
                     <div class="menu-left">
-                        <div><a href="#" class="text-body">이력서</a></div>
-                        <div><a href="#" class="text-body">채용정보</a></div>
+                        <div><a href="#" class="text-body">채용공고</a></div>
                         <div><a href="#" class="text-body">커뮤니티</a></div>
                         <div><a href="#" class="text-body">마이페이지</a></div>
                     </div>
@@ -240,8 +239,6 @@
                 <div>Copyright (c) (주)기업명 All rights reserved.</div>
             </div>
 
-            <!-- <button class="btn btn-outline-primary">고객센터</button>
-            <button class="btn btn-outline-primary">오시는길</button> -->
             </div>
         </div>
         <!-- 풋터 end -->
