구직 리스트 수정

--- a/project/list.html
+++ b/project/list.html
@@ -125,18 +125,20 @@
                     <a href="#" class="text-body">유통,판매</a>
                     <a href="#" class="text-body">문화,여가,생활</a>
                     <a href="#" class="text-body">서비스</a>
+                    <a href="#" class="text-body">미디어</a>
+
                     <br>
                     <a href="#" class="text-body">생산,건설,노무</a>
                     <a href="#" class="text-body">IT,인터넷</a>
-                    <a href="#" class="text-body">미디어</a>
                     <a href="#" class="text-body">운전,배달</a>
+                    <a href="#" class="text-body">교육,강사</a>
+
 
                     <br>
                     <a href="#" class="text-body">병원,간호,연구</a>
                     <a href="#" class="text-body">고객담당,영업,리서치</a>
                     <a href="#" class="text-body">사무,회계</a>
                     <br>
-                    <a href="#" class="text-body">교육,강사</a>
 
                 </div>
 
@@ -146,6 +148,7 @@
             <hr>
 
 
+            <div class="title mb-20">채용 정보</div>
 
             <table class="table">
                 <th>지역</th>
