--- a/project/index.html
+++ b/project/index.html
@@ -166,7 +166,7 @@
         <!-- 풋터 start -->
         <div>
             <div class="bg-light p-5 text-center">
-            <div class="d-flex justify-content-between">
+            <div class="footer-top d-flex justify-content-between">
                 <div>회사소개</div>
                 <div>이용약관</div>
                 <div>개인정보 처리방침</div>
