--- a/project/index.html
+++ b/project/index.html
@@ -76,18 +76,24 @@
                 <div class="img-box">
                     <div>
                         <div class="img1"></div>
-                        <div class="text1">회사정보</div>
-                        <div class="text2">회사정보</div>
+                        <div class="text1">회사정보
+                            <span><a href="" class="text-body"><i class="fa-regular fa-star"></i></a></span>
+                        </div>
+                    <div class="text2">회사정보</div>
                     </div>
                     <div>
                         <div class="img2"></div>
-                        <div class="text1">회사정보</div>
-                        <div class="text2">회사정보</div>
+                        <div class="text1">회사정보
+                            <span><a href="" class="text-body"><i class="fa-regular fa-star"></i></a></span>
+                        </div>
+                    <div class="text2">회사정보</div>
                     </div>
                     <div>
                         <div class="img3"></div>
-                        <div class="text1">회사정보</div>
-                        <div class="text2">회사정보</div>
+                        <div class="text1">회사정보
+                            <span><a href="" class="text-body"><i class="fa-regular fa-star"></i></a></span>
+                        </div>
+                    <div class="text2">회사정보</div>
                     </div>
      
                 </div>
@@ -109,52 +115,82 @@
 
                     <div class="company">
                         <div class="company-img1"></div>
-                        <div class="text1">회사정보</div>
+                        <div class="btn-like">
+                            <div class="text1">회사정보
+                                <span><a href="" class="text-body"><i class="fa-regular fa-star"></i></a></span>
+                            </div>
+                        </div>
                         <div class="text2">회사정보</div>
                     </div>
 
                     <div class="company">
-                        <div class="company-img2"></div>
-                        <div class="text1">회사정보</div>
+                        <div class="company-img1"></div>
+                        <div class="btn-like">
+                            <div class="text1">회사정보
+                                <span><a href="" class="text-body"><i class="fa-regular fa-star"></i></a></span>
+                            </div>
+                        </div>
                         <div class="text2">회사정보</div>
                     </div>
 
-                    <div class="company">
-                        <div class="company-img3"></div>
-                        <div class="text1">회사정보</div>
+                   <div class="company">
+                        <div class="company-img1"></div>
+                        <div class="btn-like">
+                            <div class="text1">회사정보
+                                <span><a href="" class="text-body"><i class="fa-regular fa-star"></i></a></span>
+                            </div>
+                        </div>
+                        <div class="text2">회사정보</div>
+                    </div>  
+                   <div class="company">
+                        <div class="company-img1"></div>
+                        <div class="btn-like">
+                            <div class="text1">회사정보
+                                <span><a href="" class="text-body"><i class="fa-regular fa-star"></i></a></span>
+                            </div>
+                        </div>
                         <div class="text2">회사정보</div>
                     </div>
 
-                    <div class="company">
-                        <div class="company-img4"></div>
-                        <div class="text1">회사정보</div>
+                   <div class="company">
+                        <div class="company-img1"></div>
+                        <div class="btn-like">
+                            <div class="text1">회사정보
+                                <span><a href="" class="text-body"><i class="fa-regular fa-star"></i></a></span>
+                            </div>
+                        </div>
                         <div class="text2">회사정보</div>
                     </div>
 
-                    <div class="company">
-                        <div class="company-img5"></div>
-                        <div class="text1">회사정보</div>
+                   <div class="company">
+                        <div class="company-img1"></div>
+                        <div class="btn-like">
+                            <div class="text1">회사정보
+                                <span><a href="" class="text-body"><i class="fa-regular fa-star"></i></a></span>
+                            </div>
+                        </div>
                         <div class="text2">회사정보</div>
                     </div>
 
-                    <div class="company">
-                        <div class="company-img6"></div>
-                        <div class="text1">회사정보</div>
-                        <div class="text2">회사정보c</div>
-                    </div>
-
-                    <div class="company">
-                        <div class="company-img7"></div>
-                        <div class="text1">회사정보</div>
+                   <div class="company">
+                        <div class="company-img1"></div>
+                        <div class="btn-like">
+                            <div class="text1">회사정보
+                                <span><a href="" class="text-body"><i class="fa-regular fa-star"></i></a></span>
+                            </div>
+                        </div>
                         <div class="text2">회사정보</div>
                     </div>
 
-                    <div class="company">
-                        <div class="company-img8"></div>
-                        <div class="text1">회사정보</div>
+                   <div class="company">
+                        <div class="company-img1"></div>
+                        <div class="btn-like">
+                            <div class="text1">회사정보
+                                <span><a href="" class="text-body"><i class="fa-regular fa-star"></i></a></span>
+                            </div>
+                        </div>
                         <div class="text2">회사정보</div>
                     </div>
-
                 </div>
             </section>
             <!-- 추천 채용 정보 end -->
