--- a/project/list.html
+++ b/project/list.html
@@ -75,18 +75,24 @@
                 <div class="img-box">
                     <div>
                         <div class="img1"></div>
-                        <div class="text1">회사정보</div>
-                        <div class="text2">회사정보</div>
+                        <div class="text1">회사정보
+                            <span><a href="" class="text-body"><i class="fa-regular fa-star"></i></a></span>
+                        </div>
+                    <div class="text2">회사정보</div>
                     </div>
                     <div>
                         <div class="img2"></div>
-                        <div class="text1">회사정보</div>
-                        <div class="text2">회사정보</div>
+                        <div class="text1">회사정보
+                            <span><a href="" class="text-body"><i class="fa-regular fa-star"></i></a></span>
+                        </div>
+                    <div class="text2">회사정보</div>
                     </div>
                     <div>
                         <div class="img3"></div>
-                        <div class="text1">회사정보</div>
-                        <div class="text2">회사정보</div>
+                        <div class="text1">회사정보
+                            <span><a href="" class="text-body"><i class="fa-regular fa-star"></i></a></span>
+                        </div>
+                    <div class="text2">회사정보</div>
                     </div>
      
                 </div>
