--- a/project/company.html
+++ b/project/company.html
@@ -75,28 +75,34 @@
                 <div class="best-injae">
                     <div>
                         <div class="company-people-image1"></div>
-                        <div class="text1">뽑아주세요.</div>
-                        <div class="text2">류재성</div>
+                        <div class="text1">뽑아주세요.
+                            <span><a href="" class="text-body"><i class="fa-regular fa-star"></i></a></span>
+                        </div>
+                    <div class="text2">류재성</div>
                     </div>
                     <div>
                         <div class="company-people-image2"></div>
-                        <div class="text1">뽑아주세요.</div>
-                        <div class="text2">류재성</div>
+                        <div class="text1">뽑아주세요.
+                            <span><a href="" class="text-body"><i class="fa-regular fa-star"></i></a></span>
+                        </div>                        <div class="text2">류재성</div>
                     </div>
                     <div>
                         <div class="company-people-image3"></div>
-                        <div class="text1">뽑아주세요.</div>
-                        <div class="text2">류재성</div>
+                        <div class="text1">뽑아주세요.
+                            <span><a href="" class="text-body"><i class="fa-regular fa-star"></i></a></span>
+                        </div>                        <div class="text2">류재성</div>
                     </div>
                     <div>
                         <div class="company-people-image3"></div>
-                        <div class="text1">뽑아주세요.</div>
-                        <div class="text2">류재성</div>
+                        <div class="text1">뽑아주세요.
+                            <span><a href="" class="text-body"><i class="fa-regular fa-star"></i></a></span>
+                        </div>                        <div class="text2">류재성</div>
                     </div>
                     <div>
                         <div class="company-people-image3"></div>
-                        <div class="text1">뽑아주세요.</div>
-                        <div class="text2">류재성</div>
+                        <div class="text1">뽑아주세요.
+                            <span><a href="" class="text-body"><i class="fa-regular fa-star"></i></a></span>
+                        </div>                        <div class="text2">류재성</div>
                     </div>
      
                 </div>
