--- a/project/index.html
+++ b/project/index.html
@@ -25,8 +25,10 @@
                             id="Layer_1" x="0px" y="0px" width="94px" height="40px" viewBox="0 0 94 40"
                             enable-background="new 0 0 94 40" xml:space="preserve">
                             <image id="image0" width="94" height="40" x="0" y="-5"
-                                href="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAF4AAAAoBAMAAACFh1CBAAAABGdBTUEAALGPC/xhBQAAACBjSFJN AAB6JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAAG1BMVEX///+/8Nif6MQgy3Zg 2p3f9+sAw2KA4bFA0omp4jRuAAAAAWJLR0QAiAUdSAAAAAlwSFlzAAAOwwAADsMBx2+oZAAAAAd0 SU1FB+gCGgIhE3gCV4cAAAGDSURBVDjL7ZM9T8MwEECdUJOMFUNZC0VlLaK0HQOoUcaolZIVsDk8 0g4OYwRV+Nvc2W5II8QEEkK9Ic8fz45z5zC2j5+Obt0aXO/OtPsmOIy2TS13p9p959/9PT9Pxn2a z982yME0SDZ96/OX2Xw59i7nxU1a+z4AiJRpgVRIhZSp8TXOVNKHCcC09nEQ4MqiSclC05S+QeR8 D8TqHAR6RGV4RpQshtdFZfz3GO6dH0LJWAZ93WQPKT1ycvIfGJ8o5x8C1rgDpYbU0fXRw5Wczv+I nyJ86w8F0oORVi3KDmCaWGzXZRA4X1nqXaIf0puYbvk92t+HSLcpA3hu7u/Z8YxGQ5yntzeJ3zui kzX9DKIAS8Er6GpibMmIkk+wjMva5yxIADBTMK7gieq05eaWKDGrswRqn7EDoAwvqXqlq2vkWJIf bOtb+wIzwNG4oDw4Km1uC90f3EoNP32/ML8jP1rh83hliec+Nf01PhYnab7mBWYgL9jX8eW9/yZ+ 29/Hf4kPlS2yy49Smd8AAAAldEVYdGRhdGU6Y3JlYXRlADIwMjQtMDItMjZUMDI6MzM6MTkrMDA6 MDDonyckAAAAJXRFWHRkYXRlOm1vZGlmeQAyMDI0LTAyLTI2VDAyOjMzOjE5KzAwOjAwmcKfmAAA AABJRU5ErkJggg==" />
-                        </svg> </a>
+                                href="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAF8AAAAnBAMAAACbE4lqAAAABGdBTUEAALGPC/xhBQAAACBjSFJN AAB6JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAAG1BMVEX///+/8Nif6MQgy3Zg 2p3f9+sAw2KA4bFA0omp4jRuAAAAAWJLR0QAiAUdSAAAAAlwSFlzAAAOwwAADsMBx2+oZAAAAAd0 SU1FB+gCGgMEA4yE/TMAAAGBSURBVDjL7ZM9T8MwEECdUJOMFUNZC0VlLaK0HQOoUcaolZIViDk8 0g4OYwRV+Nvc2XGbhA+xICHEDXl2fK+271LG/uOb0d2OBpfNlfbcBIeRHSrRXGrPrXDzK4U0Gvcp IX3ZIAdTL9r0jcCfZvPl2Dmf51fxTnABIIuZypASKZEi1oLClVK4MAGY7gR8C3BhUKdgvh4KVyOw ggPZ6hQyTCRKzROiYCE8L0otvIZwawUfCsYS6Ks6e0jhUFJKwh3jE2mFfcBud6BQEFes5piIKqc7 3ON1MisMaeTASMkWRQewWCw0YgJbQRqqJlHwaS+m2kKPdnAhUG0KDx7f7YALCb32MYEOUCdeekSH awgJBB72hJfQVcTQkBEFn2A/l3XBiwCwYDAu4YEaZrm5Jgos7iyCurAHVOkl9bGoOhxULEjwbKd3 QoZ14JhyRtWoKJX+cuhbwt+Sw5rg5l1dqoMVPg9Xhnj2Yz1f42NxFKdrnmMZ0px9Eh//D76Inxf+ 48/FG6OfsrQjV/McAAAAJXRFWHRkYXRlOmNyZWF0ZQAyMDI0LTAyLTI2VDAzOjA0OjAwKzAwOjAw FwXGlAAAACV0RVh0ZGF0ZTptb2RpZnkAMjAyNC0wMi0yNlQwMzowNDowMCswMDowMGZYfigAAAAo dEVYdGRhdGU6dGltZXN0YW1wADIwMjQtMDItMjZUMDM6MDQ6MDMrMDA6MDAApUVqAAAAAElFTkSu QmCC" />
+                        </svg>
+                    </a>
+
                 </div>
 
                 <div class="menu-left">
