list 페이지 버튼화

--- a/project/list.html
+++ b/project/list.html
@@ -134,6 +134,7 @@
                     <a href="#" class="text-body">서비스</a>
                     <a href="#" class="text-body">미디어</a>
 
+
                     <br>
                     <a href="#" class="text-body">생산,건설,노무</a>
                     <a href="#" class="text-body">IT,인터넷</a>
@@ -165,64 +166,64 @@
 
                 <tr>
                     <td>서울</td>
-                    <td>2024 샘표식품 각 부문 수시 채용</td>
+                    <td><a href="#" class="text-body">2024 샘표식품 각 부문 수시 채용</a></td>
                     <th>09:00-18:00</th>
                     <td>최저시급</td>
                 </tr>
 
                 <tr>
                     <td>서울</td>
-                    <td>2024 샘표식품 각 부문 수시 채용</td>
+                    <td><a href="#" class="text-body">2024 샘표식품 각 부문 수시 채용</a></td>
                     <th>09:00-18:00</th>
                     <td>최저시급</td>
                 </tr>
 
                 <tr>
                     <td>서울</td>
-                    <td>2024 샘표식품 각 부문 수시 채용</td>
+                    <td><a href="#" class="text-body">2024 샘표식품 각 부문 수시 채용</a></td>
                     <th>09:00-18:00</th>
                     <td>최저시급</td>
                 </tr>
 
                 <tr>
                     <td>서울</td>
-                    <td>2024 샘표식품 각 부문 수시 채용</td>
+                    <td><a href="#" class="text-body">2024 샘표식품 각 부문 수시 채용</a></td>
                     <th>09:00-18:00</th>
                     <td>최저시급</td>
                 </tr>
                 <tr>
                     <td>서울</td>
-                    <td>2024 샘표식품 각 부문 수시 채용</td>
+                    <td><a href="#" class="text-body">2024 샘표식품 각 부문 수시 채용</a></td>
                     <th>09:00-18:00</th>
                     <td>최저시급</td>
                 </tr>
                 <tr>
                     <td>서울</td>
-                    <td>2024 샘표식품 각 부문 수시 채용</td>
+                    <td><a href="#" class="text-body">2024 샘표식품 각 부문 수시 채용</a></td>
                     <th>09:00-18:00</th>
                     <td>최저시급</td>
                 </tr>
                 <tr>
                     <td>서울</td>
-                    <td>2024 샘표식품 각 부문 수시 채용</td>
+                    <td><a href="#" class="text-body">2024 샘표식품 각 부문 수시 채용</a></td>
                     <th>09:00-18:00</th>
                     <td>최저시급</td>
                 </tr>
                 <tr>
                     <td>서울</td>
-                    <td>2024 샘표식품 각 부문 수시 채용</td>
+                    <td><a href="#" class="text-body">2024 샘표식품 각 부문 수시 채용</a></td>
                     <th>09:00-18:00</th>
                     <td>최저시급</td>
                 </tr>
                 <tr>
                     <td>서울</td>
-                    <td>2024 샘표식품 각 부문 수시 채용</td>
+                    <td><a href="#" class="text-body">2024 샘표식품 각 부문 수시 채용</a></td>
                     <th>09:00-18:00</th>
                     <td>최저시급</td>
                 </tr>
                 <tr>
                     <td>서울</td>
-                    <td>2024 샘표식품 각 부문 수시 채용</td>
+                    <td><a href="#" class="text-body">2024 샘표식품 각 부문 수시 채용</a></td>
                     <th>09:00-18:00</th>
                     <td>최저시급</td>
                 </tr>
