헤더 class명 변경

--- a/project/index.html
+++ b/project/index.html
@@ -14,11 +14,11 @@
 
 <body>
     <!-- 로그인창 -->
-    <main>
+    <main class="main-size">
         <!-- 헤더 start -->
 
-        <header>
-            <nav>
+        <header class="header-main">
+            <nav class="nav-header">
                 <div class="logo">
                     <a href="#">
                         <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1"
@@ -31,14 +31,14 @@
 
                 </div>
 
-                <div class="menu-left">
+                <div class="div-menu-left">
                     <div><a href="#" class="text-body">이력서</a></div>
                     <div><a href="#" class="text-body">채용정보</a></div>
                     <div><a href="#" class="text-body">커뮤니티</a></div>
                     <div><a href="#" class="text-body">마이페이지</a></div>
                 </div>
 
-                <div class="menu-right">
+                <div class="div-menu-right">
                     <div><a href="#" class="text-body">회원가입</a></div>
                     <div><a href="#" class="text-body">로그인</a></div>
                     <div><a href="#" class="text-body">개인/기업</a></div>
