--- a/project/company.html
+++ b/project/company.html
@@ -15,8 +15,8 @@
     <main>
         <!-- 헤더 start -->
 
-        <header>
-            <nav>
+        <header class="header-main">
+            <nav class="nav-header">
                 <div class="logo">
                     <a href="#">
                         <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1"
@@ -25,17 +25,18 @@
                             <image id="image0" width="94" height="40" x="0" y="-5"
                                 href="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAF8AAAAnBAMAAACbE4lqAAAABGdBTUEAALGPC/xhBQAAACBjSFJN AAB6JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAAG1BMVEX///+/8Nif6MQgy3Zg 2p3f9+sAw2KA4bFA0omp4jRuAAAAAWJLR0QAiAUdSAAAAAlwSFlzAAAOwwAADsMBx2+oZAAAAAd0 SU1FB+gCGgMEA4yE/TMAAAGBSURBVDjL7ZM9T8MwEECdUJOMFUNZC0VlLaK0HQOoUcaolZIViDk8 0g4OYwRV+Nvc2XGbhA+xICHEDXl2fK+271LG/uOb0d2OBpfNlfbcBIeRHSrRXGrPrXDzK4U0Gvcp IX3ZIAdTL9r0jcCfZvPl2Dmf51fxTnABIIuZypASKZEi1oLClVK4MAGY7gR8C3BhUKdgvh4KVyOw ggPZ6hQyTCRKzROiYCE8L0otvIZwawUfCsYS6Ks6e0jhUFJKwh3jE2mFfcBud6BQEFes5piIKqc7 3ON1MisMaeTASMkWRQewWCw0YgJbQRqqJlHwaS+m2kKPdnAhUG0KDx7f7YALCb32MYEOUCdeekSH awgJBB72hJfQVcTQkBEFn2A/l3XBiwCwYDAu4YEaZrm5Jgos7iyCurAHVOkl9bGoOhxULEjwbKd3 QoZ14JhyRtWoKJX+cuhbwt+Sw5rg5l1dqoMVPg9Xhnj2Yz1f42NxFKdrnmMZ0px9Eh//D76Inxf+ 48/FG6OfsrQjV/McAAAAJXRFWHRkYXRlOmNyZWF0ZQAyMDI0LTAyLTI2VDAzOjA0OjAwKzAwOjAw FwXGlAAAACV0RVh0ZGF0ZTptb2RpZnkAMjAyNC0wMi0yNlQwMzowNDowMCswMDowMGZYfigAAAAo dEVYdGRhdGU6dGltZXN0YW1wADIwMjQtMDItMjZUMDM6MDQ6MDMrMDA6MDAApUVqAAAAAElFTkSu QmCC" />
                         </svg>
-
                     </a>
+
                 </div>
 
-                <div class="menu-left">
-                    <div><a href="#" class="text-body">채용공고</a></div>
+                <div class="div-menu-left">
+                    <div><a href="#" class="text-body">이력서</a></div>
+                    <div><a href="#" class="text-body">채용정보</a></div>
                     <div><a href="#" class="text-body">커뮤니티</a></div>
                     <div><a href="#" class="text-body">마이페이지</a></div>
                 </div>
 
-                <div class="menu-right">
+                <div class="div-menu-right">
                     <div><a href="#" class="text-body">회원가입</a></div>
                     <div><a href="#" class="text-body">로그인</a></div>
                     <div><a href="#" class="text-body">개인/기업</a></div>
