--- a/project/list.html
+++ b/project/list.html
@@ -44,15 +44,17 @@
             </nav>
 
         </header>
-        <!-- 헤더 end -->
 
         <hr>
+
+        <!-- 헤더 end -->
+
 
         <div class="row justify-content-end mb-3">
             <div class="col-md-4">
                 <form action="/" method="get" class="form-inline">
                     <div class="input-group rounded">
-                        <input class="search-box form-control me-2 rounded-end" type="text" placeholder="기업,채용정보를 입력하세요"
+                        <input class="form-control me-2 rounded-end" type="text" placeholder="기업,채용정보를 입력하세요"
                             name="keyword" required />
                         <a href="#" class="text-body"><i class="fa-solid fa-magnifying-glass icon-search"></i></a>
                     </div>
@@ -245,8 +247,8 @@
 
         <!-- 풋터 start -->
         <div>
-            <div class="bg-light p-5 text-center">
-                <div class="footer-top d-flex justify-content-between">
+            <div class="bg-light p-5 text-center ">
+                <div class="footer-top d-flex justify-content-between ">
                     <div>회사소개</div>
                     <div>이용약관</div>
                     <div>개인정보 처리방침</div>
