--- a/project/index.html
+++ b/project/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-
+    <!-- 헤더 start -->
     <header class="header-main">
         <nav class="nav-header">
             <div class="logo">
@@ -46,16 +46,11 @@
 
     <hr>
 
+    <!-- 헤더 end -->
 
 
-
-    <!-- 로그인창 -->
+    <!-- 바디 start -->
     <main class="main-size">
-        <!-- 헤더 start -->
-
-
-        <!-- 헤더 end -->
-
 
         <div class="row justify-content-end mb-3">
             <div class="col-md-4">
@@ -73,7 +68,7 @@
         <!-- 광고 창 start -->
         <div class="div-addimage">
             <section>
-                <div class="ad-img1"></div>
+                <div class="div-ad-img1"></div>
             </section>
             <!-- 광고 창 end -->
 
@@ -209,12 +204,11 @@
         </div>
         <!-- 바디 end -->
 
-        <!-- 풋터 start -->
-        <!-- 풋터 end -->
-
-
     </main>
-    <div class="div-footer">
+
+
+    <!-- 풋터 start -->
+    <div>
         <div class="bg-light p-5 text-center">
             <div class="footer-top d-flex justify-content-between">
                 <div>회사소개</div>
@@ -232,6 +226,8 @@
             </div>
         </div>
     </div>
+
+    <!-- 풋터 end -->
 
 </body>
 
