--- a/project/company.html
+++ b/project/company.html
@@ -11,43 +11,42 @@
 </head>
 
 <body>
-    <!-- 로그인창 -->
-    <main>
-        <!-- 헤더 start -->
+    <!-- 헤더 start -->
+    <header class="header-main">
+        <nav class="nav-header">
+            <div class="logo">
+                <a href="#">
+                    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1"
+                        id="Layer_1" x="0px" y="0px" width="94px" height="40px" viewBox="0 0 94 40"
+                        enable-background="new 0 0 94 40" xml:space="preserve">
+                        <image id="image0" width="94" height="40" x="0" y="-5"
+                            href="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAF8AAAAnBAMAAACbE4lqAAAABGdBTUEAALGPC/xhBQAAACBjSFJN AAB6JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAAG1BMVEX///+/8Nif6MQgy3Zg 2p3f9+sAw2KA4bFA0omp4jRuAAAAAWJLR0QAiAUdSAAAAAlwSFlzAAAOwwAADsMBx2+oZAAAAAd0 SU1FB+gCGgMEA4yE/TMAAAGBSURBVDjL7ZM9T8MwEECdUJOMFUNZC0VlLaK0HQOoUcaolZIViDk8 0g4OYwRV+Nvc2XGbhA+xICHEDXl2fK+271LG/uOb0d2OBpfNlfbcBIeRHSrRXGrPrXDzK4U0Gvcp IX3ZIAdTL9r0jcCfZvPl2Dmf51fxTnABIIuZypASKZEi1oLClVK4MAGY7gR8C3BhUKdgvh4KVyOw ggPZ6hQyTCRKzROiYCE8L0otvIZwawUfCsYS6Ks6e0jhUFJKwh3jE2mFfcBud6BQEFes5piIKqc7 3ON1MisMaeTASMkWRQewWCw0YgJbQRqqJlHwaS+m2kKPdnAhUG0KDx7f7YALCb32MYEOUCdeekSH awgJBB72hJfQVcTQkBEFn2A/l3XBiwCwYDAu4YEaZrm5Jgos7iyCurAHVOkl9bGoOhxULEjwbKd3 QoZ14JhyRtWoKJX+cuhbwt+Sw5rg5l1dqoMVPg9Xhnj2Yz1f42NxFKdrnmMZ0px9Eh//D76Inxf+ 48/FG6OfsrQjV/McAAAAJXRFWHRkYXRlOmNyZWF0ZQAyMDI0LTAyLTI2VDAzOjA0OjAwKzAwOjAw FwXGlAAAACV0RVh0ZGF0ZTptb2RpZnkAMjAyNC0wMi0yNlQwMzowNDowMCswMDowMGZYfigAAAAo dEVYdGRhdGU6dGltZXN0YW1wADIwMjQtMDItMjZUMDM6MDQ6MDMrMDA6MDAApUVqAAAAAElFTkSu QmCC" />
+                    </svg>
+                </a>
 
-        <header class="header-main">
-            <nav class="nav-header">
-                <div class="logo">
-                    <a href="#">
-                        <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1"
-                            id="Layer_1" x="0px" y="0px" width="94px" height="40px" viewBox="0 0 94 40"
-                            enable-background="new 0 0 94 40" xml:space="preserve">
-                            <image id="image0" width="94" height="40" x="0" y="-5"
-                                href="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAF8AAAAnBAMAAACbE4lqAAAABGdBTUEAALGPC/xhBQAAACBjSFJN AAB6JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAAG1BMVEX///+/8Nif6MQgy3Zg 2p3f9+sAw2KA4bFA0omp4jRuAAAAAWJLR0QAiAUdSAAAAAlwSFlzAAAOwwAADsMBx2+oZAAAAAd0 SU1FB+gCGgMEA4yE/TMAAAGBSURBVDjL7ZM9T8MwEECdUJOMFUNZC0VlLaK0HQOoUcaolZIViDk8 0g4OYwRV+Nvc2XGbhA+xICHEDXl2fK+271LG/uOb0d2OBpfNlfbcBIeRHSrRXGrPrXDzK4U0Gvcp IX3ZIAdTL9r0jcCfZvPl2Dmf51fxTnABIIuZypASKZEi1oLClVK4MAGY7gR8C3BhUKdgvh4KVyOw ggPZ6hQyTCRKzROiYCE8L0otvIZwawUfCsYS6Ks6e0jhUFJKwh3jE2mFfcBud6BQEFes5piIKqc7 3ON1MisMaeTASMkWRQewWCw0YgJbQRqqJlHwaS+m2kKPdnAhUG0KDx7f7YALCb32MYEOUCdeekSH awgJBB72hJfQVcTQkBEFn2A/l3XBiwCwYDAu4YEaZrm5Jgos7iyCurAHVOkl9bGoOhxULEjwbKd3 QoZ14JhyRtWoKJX+cuhbwt+Sw5rg5l1dqoMVPg9Xhnj2Yz1f42NxFKdrnmMZ0px9Eh//D76Inxf+ 48/FG6OfsrQjV/McAAAAJXRFWHRkYXRlOmNyZWF0ZQAyMDI0LTAyLTI2VDAzOjA0OjAwKzAwOjAw FwXGlAAAACV0RVh0ZGF0ZTptb2RpZnkAMjAyNC0wMi0yNlQwMzowNDowMCswMDowMGZYfigAAAAo dEVYdGRhdGU6dGltZXN0YW1wADIwMjQtMDItMjZUMDM6MDQ6MDMrMDA6MDAApUVqAAAAAElFTkSu QmCC" />
-                        </svg>
-                    </a>
+            </div>
 
-                </div>
+            <div class="div-menu-left">
+                <div><a href="#" class="text-body">이력서</a></div>
+                <div><a href="#" class="text-body">채용정보</a></div>
+                <div><a href="#" class="text-body">커뮤니티</a></div>
+                <div><a href="#" class="text-body">마이페이지</a></div>
+            </div>
 
-                <div class="div-menu-left">
-                    <div><a href="#" class="text-body">이력서</a></div>
-                    <div><a href="#" class="text-body">채용정보</a></div>
-                    <div><a href="#" class="text-body">커뮤니티</a></div>
-                    <div><a href="#" class="text-body">마이페이지</a></div>
-                </div>
+            <div class="div-menu-right">
+                <div><a href="#" class="text-body">회원가입</a></div>
+                <div><a href="#" class="text-body">로그인</a></div>
+                <div><a href="#" class="text-body">개인/기업</a></div>
+            </div>
+        </nav>
 
-                <div class="div-menu-right">
-                    <div><a href="#" class="text-body">회원가입</a></div>
-                    <div><a href="#" class="text-body">로그인</a></div>
-                    <div><a href="#" class="text-body">개인/기업</a></div>
-                </div>
-            </nav>
+    </header>
 
-        </header>
+    <hr>
 
-        <hr>
-        <!-- 헤더 end -->
+    <!-- 헤더 end -->
 
+    <main class="main-size">
 
         <div class="row justify-content-end mb-3">
             <div class="col-md-4">
@@ -64,9 +63,9 @@
 
 
         <!-- 광고 창 start -->
-        <div class="body">
+        <div class="div-addimage">
             <section>
-                <div class="ad-img1"></div>
+                <div class="div-ad-img1"></div>
             </section>
             <!-- 광고 창 end -->
 
@@ -234,27 +233,30 @@
 
         </div>
 
-        <!-- 풋터 start -->
-        <div>
-            <div class="bg-light p-5 text-center">
-                <div class="footer-top d-flex justify-content-between">
-                    <div>회사소개</div>
-                    <div>이용약관</div>
-                    <div>개인정보 처리방침</div>
-                    <div>고객센터</div>
-                </div>
 
-                <div class="help">
-                    <div>고객센터 : 02-1574-1574 (평일 09:00 - 18:00, 주말 공휴일 휴무)</div>
-                    <div>이메일 : help@jobplan.co.kr FAX : 02-1574-1575 </div>
-                    <div>(주)잡플랜 : 부산광역시 부산진구 중앙대로 749 3층, 대표 최주호</div>
-                    <div>사업자 등록번호 312-82-75512, 직업정보제공사업 : 서울 관악 제 2005-6호, 통신판매업 : 제 2005-02339호</div>
-                    <div>Copyright (c) (주)잡플랜 All rights reserved.</div>
-                </div>
+    </main>
+    <!-- 풋터 start -->
+    <div>
+        <div class="bg-light p-5 text-center">
+            <div class="footer-top d-flex justify-content-between">
+                <div>회사소개</div>
+                <div>이용약관</div>
+                <div>개인정보 처리방침</div>
+                <div>고객센터</div>
+            </div>
+
+            <div class="help">
+                <div>고객센터 : 02-1574-1574 (평일 09:00 - 18:00, 주말 공휴일 휴무)</div>
+                <div>이메일 : help@jobplan.co.kr FAX : 02-1574-1575 </div>
+                <div>(주)잡플랜 : 부산광역시 부산진구 중앙대로 749 3층, 대표 최주호</div>
+                <div>사업자 등록번호 312-82-75512, 직업정보제공사업 : 서울 관악 제 2005-6호, 통신판매업 : 제 2005-02339호</div>
+                <div>Copyright (c) (주)잡플랜 All rights reserved.</div>
             </div>
         </div>
-        <!-- 풋터 end -->
-    </main>
+    </div>
+
+    <!-- 풋터 end -->
+
 </body>
 
 </html>
